# yolo_distillation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: generate_synthetic_data.py  run_training.py
src/: __main__.py  cli.py
src/pipeline/: __init__.py  orchestrator.py
src/pipeline/stages/: auto_labeling.py  data_acquisition.py  evaluation.py  human_labeling.py  training.py  vlm_review.py
src/pipeline/utils/: config.py  logging.py  markers.py
tests/: test_auto_labeling.py  test_config.py  test_human_labeling.py  test_markers.py
